--- a/home.html
+++ b/home.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HOT RESTAURANT</title>
+  <title>TOO SEXY FOR MY SHIRT - Fiyaa Restaurant</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -12,9 +13,37 @@
 <body>
 
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" id="homejumbo">
       <center>
-        <h1><span class="glyphicons glyphicons-fire"></span><span class="glyphicons glyphicons-temperature-high-warning"></span>Hot Restaurant<span class="glyphicons glyphicons-dining-set"></span><span class="glyphicons glyphicons-beer"></span></h1>
+        <span class="glyphicon glyphicon-certificate" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-usd" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-tent" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <h1>Fiyaa Restaurant</h1>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-king" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
         <hr>
       <h3>We only have 5 tables! Book your seat before they all are gone!</h3></center>
       <hr>
@@ -26,6 +55,7 @@
     <div class="row">
     <a href="/api/tables">API Table Link</a>
     <a href="/api/waitslist">API Wait List</a>
+
 =======
 <html><body>
 	<h1>Home exists.</h1>
