--- a/view.html
+++ b/view.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HOT RESTAURANT</title>
+  <title>GETTIN HOT HOT HOT - Fiyaa Restaurant</title>
   <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -15,13 +15,41 @@
   <div class="container">
     <div class="jumbotron">
       <center>
-      <span class="glyphicon glyphicon-star" aria-hidden="true"></span><h1>Hot Restaurant</h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-      <hr>
+        <span class="glyphicon glyphicon-certificate" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-usd" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-tent" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <h1>Fiyaa Restaurant</h1>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-king" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+        <hr>
       <h3>Current Reservations and Waiting List</h3></center>
       <hr>
       <center>
-      <a href="reserve.html"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicons glyphicons-notes"></span>Make Reservation</button></a>
-      <a href="home.html"><button type="button" class="btn btn-default btn-lg">Home</button></a>
+      <a href="reserve"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicons glyphicons-modal-window"></span>Make Reservation</button></a>
+      <a href="home"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</button></a>
     </center>
     </div>
     <div class="row">
@@ -40,36 +68,36 @@
             <button type="button" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
             </button>
-            <h4 class="list-group-item-heading">Stevens</h4>
-            <p class="list-group-item-text">Call ahead</p>
+            <h4 class="list-group-item-heading" id="name">Stevens</h4>
+            <p class="list-group-item-text" id="message">Call ahead</p>
           </a>
           <a href="#" class="list-group-item">
             <button type="button" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
             </button>
-            <h4 class="list-group-item-heading">Keanu Reeves</h4>
-            <p class="list-group-item-text">Needs Booster Chair</p>
+            <h4 class="list-group-item-heading" id="name">Keanu Reeves</h4>
+            <p class="list-group-item-text" id="message">Needs Booster Chair</p>
           </a>
           <a href="#" class="list-group-item">
             <button type="button" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
             </button>
-            <h4 class="list-group-item-heading">Doctor X</h4>
-            <p class="list-group-item-text"></p>
+            <h4 class="list-group-item-heading" id="name">Doctor X</h4>
+            <p class="list-group-item-text" id="message"></p>
           </a>
           <a href="#" class="list-group-item">
             <button type="button" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
             </button>
-            <h4 class="list-group-item-heading">Bette Midler</h4>
-            <p class="list-group-item-text">Requested table in the back</p>
+            <h4 class="list-group-item-heading" id="name">Bette Midler</h4>
+            <p class="list-group-item-text" id="message">Requested table in the back</p>
           </a>
           <a href="#" class="list-group-item">
             <button type="button" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
             </button>
-            <h4 class="list-group-item-heading">LLCoolJ</h4>
-            <p class="list-group-item-text"></p>
+            <h4 class="list-group-item-heading" id="name">LLCoolJ</h4>
+            <p class="list-group-item-text" id="message"></p>
           </a>
         </div>
       </div>
