--- a/view.html
+++ b/view.html
@@ -49,7 +49,6 @@
       <hr>
       <center>
       <a href="reserve"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicons glyphicons-modal-window"></span>Make Reservation</button></a>
-      <a href="home"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</button></a>
     </center>
     </div>
     <div class="row">
@@ -65,41 +64,66 @@
         <!-- Table -->
         <div class="list-group">
           <a href="#" class="list-group-item">
-            <button type="button" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
-            </button>
-            <h4 class="list-group-item-heading" id="name">Stevens</h4>
-            <p class="list-group-item-text" id="message">Call ahead</p>
+            <h4 class="list-group-item-heading">
+            <span class="label label-default">
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              1
+            </span>&nbsp;|&nbsp;<span class="name">Stevens</span></h4>
+            <p class="list-group-item-text message">Call ahead</p>
           </a>
           <a href="#" class="list-group-item">
-            <button type="button" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
-            </button>
-            <h4 class="list-group-item-heading" id="name">Keanu Reeves</h4>
-            <p class="list-group-item-text" id="message">Needs Booster Chair</p>
+            <h4 class="list-group-item-heading">
+            <span class="label label-default">
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              2
+            </span>&nbsp;|&nbsp;<span class="name">Keanu Reeves</span></h4>
+            <p class="list-group-item-text message">Needs Booster Chair</p>
           </a>
           <a href="#" class="list-group-item">
-            <button type="button" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
-            </button>
-            <h4 class="list-group-item-heading" id="name">Doctor X</h4>
-            <p class="list-group-item-text" id="message"></p>
+            <h4 class="list-group-item-heading">
+            <span class="label label-default">
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              3
+            </span>&nbsp;|&nbsp;<span class="name">Doctor X</span></h4>
+            <p class="list-group-item-text message"></p>
           </a>
           <a href="#" class="list-group-item">
-            <button type="button" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
-            </button>
-            <h4 class="list-group-item-heading" id="name">Bette Midler</h4>
-            <p class="list-group-item-text" id="message">Requested table in the back</p>
+            <h4 class="list-group-item-heading">
+            <span class="label label-default">
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              4
+            </span>&nbsp;|&nbsp;<span class="name">Bette Middler</span></h4>
+            <p class="list-group-item-text message">Requested table in the back</p>
           </a>
           <a href="#" class="list-group-item">
-            <button type="button" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-star" aria-hidden="true"></span> 1
-            </button>
-            <h4 class="list-group-item-heading" id="name">LLCoolJ</h4>
-            <p class="list-group-item-text" id="message"></p>
+            <h4 class="list-group-item-heading">
+            <span class="label label-default">
+              <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              5
+            </span>&nbsp;|&nbsp;<span class="name">LLCoolJ</span></h4>
+            <p class="list-group-item-text message"></p>
           </a>
         </div>
       </div>
-    </body>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <h5>API Links</h5>
+      <a href="api/table">JSON data: table</a>&nbsp;|&nbsp;<a href="api/waitlist">JSON data: waitlist</a>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      </div>
+    </footer>
+  <script type="text/javascript">
+    $(function(event) {
+      $.get("api/table", function( data ) {
+        $(`.list-group-item`).each(function (index) {
+          var message = data[index].message ? data[index].message : "";
+          $(this).find(".name").text(data[index].customerName);
+          $(this).children(".message").text(message);
+        });
+      }, "json" );
+    });
+  </script>
+</body>
 </html>
